@@ -44,6 +44,7 @@ Also see <a href="tutorials.html">Tutorials</a> and
 <li><a href="gres.html">Generic Resource (GRES) Scheduling</a></li>
 <li><a href="high_throughput.html">High Throughput Computing Guide</a></li>
 <li><a href="priority_multifactor.html">Multifactor Job Priority</a></li>
+<li><a href="priority_multifactor2.html">Multifactor2 Job Priority (Ticket Based)</a></li>
 <li><a href="preempt.html">Preemption</a></li>
 <li><a href="qos.html">Quality of Service (QOS)</a></li>
 <li><a href="resource_limits.html">Resource Limits</a></li>
@@ -101,6 +102,6 @@ Also see <a href="tutorials.html">Tutorials</a> and
 </li>
 </ul>
 
-<p style="text-align:center;">Last modified 24 September 2012</p>
+<p style="text-align:center;">Last modified 17 October 2012</p>
 
 <!--#include virtual="footer.txt"-->
