@@ -1046,9 +1046,10 @@ Cleared on the first day of each year at time 00:00.
 \fBPriorityType\fR
 This specifies the plugin to be used in establishing a job's scheduling
 priority. Supported values are "priority/basic" (jobs are prioritized
-by order of arrival, also suitable for sched/wiki and sched/wiki2) and
+by order of arrival, also suitable for sched/wiki and sched/wiki2),
 "priority/multifactor" (jobs are prioritized based upon size, age,
-fair\-share of allocation, etc).
+fair\-share of allocation, etc) and "priority/multifactor2" (a ticket based
+variation of priority/multifactor).
 The default value is "priority/basic".
 
 .TP
